--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,15 @@
-name: Build and Print Echo
+name: myfork1
 
 on:
   push:
-    branches:
-      - main  # Adjust the branch name as needed
+    branches: [main]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-  build_and_print:
+  build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'  # Adjust the Node.js version as needed
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build  # Adjust the build script as needed
-
-    - name: Print success message
-      run: echo "Build successful!"
-
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build-artifacts
-        path: path/to/your/build  # Adjust the build output path
-
-    - name: Clean up
-      run: rm -rf path/to/your/build  # Adjust the build output path
-
-    - name: Print message after build
-      run: echo "Build completed and artifacts uploaded!"
+      - uses: actions/checkout@v2
+      - run: echo "Build successful"
